--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edulitera</title>
     <link rel="stylesheet" href="style.css">
-    <link class="icon" rel = "icon" href = "images.jpg" 
-         type="image"   >
+    <link rel = "icon" href = "images.jpg">
    
   
 </head>
