--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edulitera</title>
     <link rel="stylesheet" href="style.css">
-    <link rel = "icon" href = "images.jpg">
+    <link rel="icon" href="images.jpg" type="image/x-icon">
    
   
 </head>
