--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <p class="text-big">Edulitera</p>
                 <p class="text-small">Edulitera is an educational organization working for the welfare of students. This is the official website of edulitera institue of education. </p>
             <div class="button">
-                <button class="btn">Subscribe</button>
-                <button class="btn">Watch</button>
+                <a href="https://www.youtube.com/channel/UCvSYyjUKI7tXEpjH5QFCbQw" target="_blank"><button class="btn">Subscribe</button></a>
+                <a href="https://www.youtube.com/channel/UCvSYyjUKI7tXEpjH5QFCbQw/videos" target="_blank"><button class="btn">Watch</button></a>
             </div>
             </div>
             
