--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Edulitera</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images.jpg" type="image/x-icon">
+
    
   
 </head>
@@ -31,7 +32,7 @@
             </div>
     </nav>
     
-    <section class="background firstsection" id="about">
+    <section class="background firstsection">
         <div class="box-main">
             <div class="firsthalf">
                 <p class="text-big">Edulitera</p>
@@ -48,10 +49,17 @@
     <section class="secright" id="services">
         <div class="paras">
         <p class="text-big">
-            Education
+            Services
         </p>
-        <p class="text-small">
-            Education, discipline that is concerned with methods of teaching and learning in schools or school-like environments as opposed to various nonformal and informal means of socialization (e.g., rural development projects and education through parent-child relationships).
+        <p>
+            <ul class="list">
+                <li>Online Classes</li>
+                <li>Examination</li>
+                <li>Html courses</li>
+                <li>Web development</li>
+                <li>Python courses</li>
+
+            </ul>
         </p>
         </div>
         <div class="thumbnail">
@@ -60,7 +68,7 @@
     </section>
     <hr>
 
-    <section class="secleft">
+    <section class="secleft" id="about">
         <div class="paras">
         <p class="text-big">
             Introduction
@@ -97,7 +105,7 @@
             <input type="text" name="name" id="name" placeholder="Phone">
             <input type="text" name="name" id="name" placeholder="Email">
             <textarea rows="3" cols="2"  name="name" id="cmt" placeholder="Comment/Message"></textarea>
-            <br><button class="btn-dark">Submit</button>
+            <br><button type="submit" class="btn-dark">Submit</button>
             <P class="phone">Our Phone: 9855557757</P>
             <P class="phone">Email: example@gmail.com</P>
             
