--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Services
         </p>
         <p>
-            <ul class="list">
+            <ul class="text-small">
                 <li>Online Classes</li>
                 <li>Examination</li>
                 <li>Html courses</li>
