--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="background firstsection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="text-big">Edulitera</p>
+                <p class="text-big">Hi aaryan</p>
                 <p class="text-small">Edulitera is an educational organization working for the welfare of students. This is the official website of edulitera institue of education. </p>
             <div class="button">
                 <a href="https://www.youtube.com/channel/UCvSYyjUKI7tXEpjH5QFCbQw" target="_blank"><button class="btn">Subscribe</button></a>
