--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="ritesh.html">About Me</a></li>
         </ul>
         <div class="rightnav v-class-resp">
             <input type="text" name="Search" id="Search">
@@ -35,7 +36,7 @@
     <section class="background firstsection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="text-big">Hi aaryan</p>
+                <p class="text-big">Edulitera</p>
                 <p class="text-small">Edulitera is an educational organization working for the welfare of students. This is the official website of edulitera institue of education. </p>
             <div class="button">
                 <a href="https://www.youtube.com/channel/UCvSYyjUKI7tXEpjH5QFCbQw" target="_blank"><button class="btn">Subscribe</button></a>
@@ -46,7 +47,7 @@
         </div>
     </section>
     <hr>
-    <section class="secright" id="services">
+    <section class="secright background" id="services" >
         <div class="paras">
         <p class="text-big">
             Services
@@ -68,7 +69,7 @@
     </section>
     <hr>
 
-    <section class="secleft" id="about">
+    <section class="secleft background" id="about">
         <div class="paras">
         <p class="text-big">
             Introduction
@@ -81,7 +82,7 @@
         </div>
     </section>
     <hr>
-    <section class="secright">
+    <section class="secright background">
         <div class="paras">
         <p class="text-big">
             Conclusion
