--- a/ritesh.html
+++ b/ritesh.html
@@ -10,6 +10,27 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="background">
+    <nav class="navbar backround h-nav-resp" >
+        <ul class="navlist v-class-resp">
+            <div class="logo"><img src="images.jpg" alt="logo"></div>
+            <p class="vb"> Edulitera</p>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Contact</a></li>
+            <li><a href="ritesh.html">About Me</a></li>
+        </ul>
+        <div class="rightnav v-class-resp">
+            <input type="text" name="Search" id="Search">
+            <button class="btn btn-sm" >Search</button>
+        </div>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+    </nav>
+
     <center>
         <img src="1.jpg">
     <p1>
@@ -28,7 +49,7 @@
         </Ul>
     </p>
     </center>
-    <footer class="background">
+
     <div class="bg-gray-100">
         <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
           <p class="text-white-500 text-sm text-center sm:text-left">© Ritesh Kandel —
@@ -60,6 +81,7 @@
           </span>
         </div>
       </div>
-    </footer>
+
+    <script src="./resp.js"></script>
 </body>
 </html>
