--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
     <footer class="background footer">
         Copyright &copy;-All rights reserved
        <br> @kandelritesh
+       
     </footer>
+    
+<button onclick="topFunction()" id="myBtn" title="Go to top">↑</button>
+
+
     <script src="./resp.js"></script>
 </body>
 </html>
