--- a/ritesh.html
+++ b/ritesh.html
@@ -23,7 +23,7 @@
     
     </center>
     <center>
-        <img src="1.jpg">
+        <img src="1.jpg" class="photo">
     <p1>
         RITESH KANDEL
     </p1>
@@ -42,7 +42,7 @@
     </center>
     
 
-    <div class="bg-gray-100">
+    <div class="bg-white-100">
         <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
           <p class="text-white-500 text-sm text-center sm:text-left">© Ritesh Kandel —
             <a href="https://twitter.com/KandelRitesh" rel="noopener noreferrer" class="text-white-600 ml-1" target="_blank">@kandelritesh</a>
